[gd_scene load_steps=6 format=3 uid="uid://b8tbjg5xxsmnt"]

[ext_resource type="Script" uid="uid://dso5uie2w7067" path="res://copier.gd" id="1_5v01h"]
[ext_resource type="PackedScene" uid="uid://lh8l74enboib" path="res://Explosion_particles.tscn" id="2_kxrch"]
[ext_resource type="AudioStream" uid="uid://veaqssu5qrcu" path="res://Assets/Sound/FNF_WW_foley_potions_conjure_exploding_small_poof.wav" id="3_qqquk"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_2va7f"]
size = Vector2(80, 80)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bv5kx"]
size = Vector2(53, 53)

[node name="UnRedacter" type="Area2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_5v01h")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("PlaceholderTexture2D_2va7f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_bv5kx")

[node name="Label" type="Label" parent="."]
offset_left = -30.0
offset_top = -22.0
offset_right = 10.0
offset_bottom = 27.0
text = "Un-Redacter"
autowrap_mode = 2

[node name="ScanComplete" type="Timer" parent="."]
wait_time = 2.0

[node name="ScanDanger" type="Timer" parent="."]

[node name="ScanDestroyed" type="Timer" parent="."]
wait_time = 5.0

[node name="CheckArea" type="Timer" parent="."]
wait_time = 0.2

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="CPUParticles2D" parent="." instance=ExtResource("2_kxrch")]

[node name="explosion" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_qqquk")
volume_db = -5.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="timeout" from="ScanComplete" to="." method="_on_scan_complete_timeout"]
[connection signal="timeout" from="ScanDanger" to="." method="_on_scan_danger_timeout"]
[connection signal="timeout" from="ScanDestroyed" to="." method="_on_scan_destroyed_timeout"]
[connection signal="timeout" from="CheckArea" to="." method="_on_check_area_timeout"]
